fix image overflowing on frontend

--- a/src/blocks/image-maxi/style.scss
+++ b/src/blocks/image-maxi/style.scss
@@ -24,6 +24,7 @@ body.maxi-blocks--active figure.maxi-image-block {
 		position: relative;
 		width: 100%;
 		max-width: 100%;
+		max-height: 100%;
 		flex-grow: 1;
 		box-sizing: border-box;
 
